--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -156,9 +156,12 @@
     <Compile Include="Assets\Asset Packs\Standard Assets\Vehicles\Car\Scripts\Suspension.cs" />
     <Compile Include="Assets\Asset Packs\Standard Assets\Vehicles\Car\Scripts\WheelEffects.cs" />
     <Compile Include="Assets\Scrips\CollisionHandler.cs" />
+    <Compile Include="Assets\Scrips\Enemy.cs" />
     <Compile Include="Assets\Scrips\MusicPlayer.cs" />
     <Compile Include="Assets\Scrips\PlayerController.cs" />
     <Compile Include="Assets\Scrips\SceneLoader.cs" />
+    <Compile Include="Assets\Scrips\ScoreBoard.cs" />
+    <Compile Include="Assets\Scrips\SelfDestructor.cs" />
     <None Include="Assets\Asset Packs\Standard Assets\Effects\GlassRefraction\Shaders\GlassStainedBumpDistort.shader" />
     <None Include="Assets\Asset Packs\Standard Assets\Effects\ToonShading\Shaders\ToonBasic.shader" />
     <None Include="Assets\Asset Packs\Standard Assets\Prototyping\Shaders\WorldCoordDiffuse.shader" />
